utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/valid/SupportedAssignment.option
option supportedPropCoCo: String {
    label "A Label"
    required true
}
