utilities/Sol/modules/grammars/option/src/test/resources/cocos/instance/invalid/AssignmentType.option
option propTypeCoCo: String {
    label true
}
